add banner in desktop

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,6 +4,7 @@
 /*--- COMPONENTS ---*/
 //@import "components/header";
 //@import "components/header-mob";
+@import "components/banner";
 @import "components/page-title";
 @import "components/title";
 @import "components/subtitle";
