--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,32 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-
 @import "./assets/css/reset.css";
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:500,700" rel="stylesheet');
+
 @import "~@ng-select/ng-select/themes/default.theme.css";
 @import "assets/scss/style.scss";
-//@import "assets/scss/old/variables";
-//@import "assets/scss/old/animations";
-//@import "assets/scss/old/layout";
-///*----- CONTENT -----*/
-//@import "assets/scss/old/page-title";
-//@import "assets/scss/old/button";
-////@import "./assets/scss/requests";
-//@import "assets/scss/old/notification-popup";
-//@import "assets/scss/old/wrap-input";
-//@import "assets/scss/old/toggler-button";
-////@import "./assets/scss/dropdown";
-////@import "./assets/scss/table-top";
-//@import "assets/scss/old/table";
-////@import "./assets/scss/under-table";
-////@import "./assets/scss/paginator";
-//@import "assets/scss/old/popup";
-//@import "assets/scss/old/settings";
-////@import "./assets/scss/open-balance-mob";
-//@import "assets/scss/old/radio-btn";
-//@import "assets/scss/old/select";
-///*----- CONTENT END -----*/
-////@import "./assets/scss/footer";
-//@import "assets/scss/old/modal";
-//@import "assets/scss/old/chat-btn";
-//@import "assets/scss/old/datepicker";
-//@import "assets/scss/old/input-file";
