--- a/src/app/funds/balance/send-money/send-step-three/send-step-three.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-step-three.component.html
@@ -1,11 +1,24 @@
-<!--<app-transfer-instant></app-transfer-instant>-->
-<!--<app-transfer-protected-email-code></app-transfer-protected-email-code>-->
-<!--<app-transfer-protected-code></app-transfer-protected-code>-->
+<app-transfer-instant
+*ngIf="choosedName === 'By email'"
+>
+</app-transfer-instant>
+
+<app-transfer-protected-email-code
+*ngIf="choosedName === 'By code'"
+>
+</app-transfer-protected-email-code>
+
+<app-transfer-protected-code
+*ngIf="choosedName === 'By private code'"
+>
+</app-transfer-protected-code>
+
 <app-send-tfa
   *ngIf="choosedName === 'With code'"
   (sendSuccess)="onSendSuccess($event)"
   [data]="data"
-></app-send-tfa>
+>
+</app-send-tfa>
 
 <!--<app-send-successful-->
 <!--*ngIf="choosedName === 'Send Success'"-->
