--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
@@ -121,3 +121,53 @@
     margin-top: 32px;
   }
 }
+// ----------------------
+.select__searching-item {
+  span {
+    color: #ccc;
+  }
+}
+
+.captcha-wrapper{
+  display: flex;
+  flex-direction: column;
+  re-captcha{
+    margin: 0 auto;
+  }
+}
+
+.select__search-input {
+  color: #ccc !important;
+}
+perfect-scrollbar{
+  height: 160px;
+}
+
+
+::ng-deep div.wrap-input.send__wrap-input {
+  .wrap-input__message{
+    color: #EB5757 !important;
+  }
+  app-price-input {
+    label {
+      background: #191A39 !important;
+    }
+  }
+  &.wrap-input--error {
+    app-price-input {
+      label {
+        color: #EB5757 !important;
+      }
+      input:focus {
+        &+label{
+          color: #94C2FF !important;
+        }
+      }
+    }
+  }
+}
+
+.btn-active {
+  background-color: #237BEF;
+  color: #fff;
+}
