--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
@@ -1,99 +1,117 @@
 <div class="title send__title">Make Inner transfer by email or nickname</div>
-<div class="send__inputs-wrap">
-  <div class="select send__select send__select--custom">
-    <div class="select__value select__value--active">
-      <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-      BTC
-    </div>
-    <div class="select__label">Currency</div>
-    <div class="select__line"></div>
-    <div class="select__triangle"></div>
-    <!--add select__list-searching--open for looking open state-->
-    <div class="select__list-searching">
-      <div class="select__search">
-        <input class="select__search-input" type="text" placeholder="Search" required>
-        <div class="select__search-icon">
-          <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
-          </svg>
+<div class="formWraper" *ngIf="isEnterData">
+  <form [formGroup]="form">
+    <div class="send__inputs-wrap">
+      <div class="select send__select send__select--custom">
+        <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
+          <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+          {{activeCrypto ? activeCrypto.name : ''}}
         </div>
-      </div>
-      <div class="select__list-searching-body">
-        <h6 class="select__searching-items-title">A</h6>
-        <div class="select__searching-items-wrap">
-          <div class="select__searching-item">
-            <img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">
-            <span>ETH</span>
+        <div class="select__label">Currency</div>
+        <div class="select__line"></div>
+        <div class="select__triangle"></div>
+        <!--add select__list-searching--open for looking open state-->
+        <div class="select__list-searching" *ngIf="openCurrencyDropdown">
+          <div class="select__search">
+            <input class="select__search-input" type="text" placeholder="Search" (input)="searchCoin($event)">
+            <div class="select__search-icon">
+              <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
+              </svg>
+            </div>
           </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-            <span>BTC</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/zec-icon.svg" class="select__list-item-icon">
-            <span>ZEC</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">
-            <span>ETH</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-            <span>BTC</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/zec-icon.svg" class="select__list-item-icon">
-            <span>ZEC</span>
-          </div>
+          <div class="select__list-searching-body">
 
+            <perfect-scrollbar>
+              <ng-container *ngFor="let letter of alphabet">
+                <h6 class="select__searching-items-title">{{letter.toUpperCase()}}</h6>
+                <div class="select__searching-items-wrap">
+                  <div class="select__searching-item" *ngFor="let name of cryptoNames | groupCoin:letter"
+                       (click)="selectCurrency(name)">
+                    <!--<img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">-->
+                    <span>{{name.name}}</span>
+                  </div>
+                </div>
+              </ng-container>
+            </perfect-scrollbar>
+
+          </div>
         </div>
       </div>
+      <div class="wrap-input send__wrap-input"
+           [ngClass]="{'wrap-input--error': isSubmited && (isAmountMax || isAmountMin || form.controls['amount'].value === '0')}">
+        <div class="avaliable">Avaliable: <a (click)="balanceClick()" class="link">{{activeBalance | number:'1.1-8' | replaceNumber}} {{activeCrypto ?
+          activeCrypto.name : ''}}</a></div>
+        <app-price-input [placeholder]="(activeCrypto ? activeCrypto.name : '') + ' Amount'"
+                         (customInput)="amountInput($event)" name="amount" formControlName="amount"></app-price-input>
+        <!--Input error section starts-->
+        <!--<span class="wrap-input__message wrap-input__message&#45;&#45;show">Day limit for withdrawal is 30 000 BTC</span>-->
+        <span class="wrap-input__message wrap-input__message--show"
+              *ngIf="(isAmountMin || form.controls['amount'].value === '0') && isSubmited">
+      Minimum sum for withdrawal {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
+        <span class="wrap-input__message wrap-input__message--show"
+              *ngIf="isAmountMax && isSubmited">
+      Max sum for withdrawal {{activeBalance}}</span>
+        <!--Input error section ends-->
+      </div>
+      <div class="wrap-input  send__wrap-input"
+           [ngClass]="{'wrap-input--error': isSubmited && !form.controls['email'].valid}">
+        <input class="wrap-input__input" name="email" formControlName="email">
+        <label class="wrap-input__label">Email</label>
+        <div class="wrap-input__line"></div>
+        <!--Input error section starts-->
+        <span class="wrap-input__message"
+              *ngIf="!form.controls['email'].valid && isSubmited">Enter valid email to transfer</span>
+        <!--Input error section ends-->
+      </div>
+    </div>
+  </form>
+  <div class="send__line"></div>
+  <div class="send__info">
+    <div class="send__info-row">
+      <div class="send__info-title">You want to transfer:</div>
+      <div class="send__info-value">{{responseCommission.amount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
+    </div>
+    <div class="send__info-row">
+      <div class="send__info-title">Exchange comission:</div>
+      <div class="send__info-value">{{responseCommission.companyCommissionRate}} =
+        {{responseCommission.totalCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}
+      </div>
+    </div>
+    <!--<div class="send__info-row">-->
+    <!--<div class="send__info-title">Total comission:</div>-->
+    <!--<div class="send__info-value">24% = 0.000005 BTC</div>-->
+    <!--</div>-->
+    <div class="send__info-row">
+      <div class="send__info-title">Total with comission:</div>
+      <div class="send__info-value">{{responseCommission.resultAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
     </div>
   </div>
-  <div class="wrap-input send__wrap-input">
-    <div class="avaliable">Avaliable: <a href="#" class="link">123 BTC</a></div>
-    <input class="wrap-input__input" required>
-    <label class="wrap-input__label"><span>BTC </span>Amount</label>
-    <div class="wrap-input__line"></div>
-    <!--Input error section starts-->
-    <span class="wrap-input__message wrap-input__message--show">Day limit for withdrawal is 30 000 BTC</span>
-    <!--Input error section ends-->
-  </div>
-  <div class="wrap-input wrap-input--error send__wrap-input">
-    <input class="wrap-input__input" required>
-    <label class="wrap-input__label">Email or nickname</label>
-    <div class="wrap-input__line"></div>
-    <!--Input error section starts-->
-    <span class="wrap-input__message">Enter email or nickname to transfer</span>
-    <!--Input error section ends-->
-  </div>
-</div>
-<div class="send__line"></div>
-<div class="send__info">
-  <div class="send__info-row">
-    <div class="send__info-title">You want to withdraw:</div>
-    <div class="send__info-value">0 BTC</div>
-  </div>
-  <div class="send__info-row">
-    <div class="send__info-title">Exchange comission:</div>
-    <div class="send__info-value">12% = 0 BTC</div>
-  </div>
-  <div class="send__info-row">
-    <div class="send__info-title">Total comission:</div>
-    <div class="send__info-value">24% = 0.000005 BTC</div>
-  </div>
-  <div class="send__info-row">
-    <div class="send__info-title">Total with comission:</div>
-    <div class="send__info-value">0.000005 BTC</div>
+  <button class="btn btn--center"
+          [ngClass]="{
+        'btn--empty-blue': !form.valid && !isSubmited ,
+        'btn--error': (!form.valid || isAmountMin || isAmountMax )&& isSubmited
+        }"
+  (click)="submitTransfer()"
+  >Transfer <span class="value">{{responseCommission.amount}}</span>
+    <span> {{activeCrypto ? activeCrypto.name : ''}}</span></button>
+  <div class="send__line"></div>
+  <div class="note modal__note">
+    <div class="note__title">Please note:</div>
+    <ul class="note__list">
+      <li class="note__list-item">Once you have submitted your withdrawal request, we will send a confirmation email.
+        Please then click on the confirmation link in your email.
+      </li>
+      <li class="note__list-item">After making a withdrawal, you can track its progress in history on funds page.</li>
+    </ul>
   </div>
 </div>
-<button class="btn btn--center btn--empty-blue">Transfer <span class="value">123.000000</span> <span> BTC</span></button>
-<div class="send__line"></div>
-<div class="note modal__note">
-  <div class="note__title">Please note:</div>
-  <ul class="note__list">
-    <li class="note__list-item">Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email.</li>
-    <li class="note__list-item">After making a withdrawal, you can track its progress in history on funds page.</li>
-  </ul>
+
+<div *ngIf="!isEnterData" class="captcha-wrapper">
+  <h6 class="popup__title">Enter the captcha</h6>
+  <re-captcha (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
+  <div class="popup__links-wrap  popup__links-wrap--center">
+    <a class="popup__link" (click)="goToForm()">Back to withdrawal form</a>
+  </div>
 </div>
