--- a/src/app/dashboard/components/chat/chat.component.scss
+++ b/src/app/dashboard/components/chat/chat.component.scss
@@ -1,7 +1,7 @@
-ng-scrollbar{
+perfect-scrollbar{
   display: block;
   width: 100%;
-  height: 400px;
+  height: 100%;
   margin: auto;
 }
 
@@ -12,5 +12,10 @@ ng-scrollbar{
   background-color: transparent;
 }
 .widget__content{
-  height: calc(100% - 44px);
+  height: calc(100% - 41px);
+}
+@media (min-width:1200px) {
+  //perfect-scrollbar{
+  //  height: 380px;
+  //}
 }
