--- a/src/app/orders/open-orders/open-orders.component.scss
+++ b/src/app/orders/open-orders/open-orders.component.scss
@@ -69,7 +69,7 @@
     margin: 0 auto;
     font-size: 0 !important;
     vertical-align: middle;
-    background-image: url("assets/img/close-light-blue.svg");
+    background-image: url("../../../assets/img/close-light-blue.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
