send money withdrawal

--- a/src/app/funds/balance/refill-money/refill-money.component.html
+++ b/src/app/funds/balance/refill-money/refill-money.component.html
@@ -17,7 +17,7 @@
         <!--</a>-->
         <a class="modal__control-mob" href="#">
           <img class="modal__control-icon" src="../../../assets/img/learn-blue.svg"></a>
-        <a class="modal__control-mob">
+        <a class="modal__control-mob" (click)="onCloseRefillBalancePopup()">
           <img class="modal__control-icon" src="../../../assets/img/close-blue.svg"></a>
       </div>
     </div>
