--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -261,7 +261,7 @@
       </a>
 
 
-      <a class="header-mob__submenu-link" routerLink="balance" routerLinkActive="header-mob__submenu-link--active"
+      <a class="header-mob__submenu-link" routerLink="funds/balances" routerLinkActive="header-mob__submenu-link--active"
          (click)="setMobileWidget('balance')" *ngIf="isAuthenticated()">
         <img class="header-mob__submenu-link-img" src="../../assets/img/wallet.svg">
         <span class="header-mob__submenu-link-text">Balances</span>
