--- a/src/app/funds/balance/send-money/send-money.component.html
+++ b/src/app/funds/balance/send-money/send-money.component.html
@@ -11,14 +11,14 @@
     <!-- modal header start -->
     <div class="modal__header-mob">
       <div class="steps__counter steps__counter--mob">step
-        <span class="steps__counter-val">1</span>/2</div>
+        <span class="steps__counter-val">{{step}}</span>/4</div>
       <div class="modal__header-mob-controls">
         <!--<a class="modal__control-mob" href="#">-->
         <!--<img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg">-->
         <!--</a>-->
         <a class="modal__control-mob" href="#">
           <img class="modal__control-icon" src="../../../assets/img/learn-blue.svg"></a>
-        <a class="modal__control-mob">
+        <a class="modal__control-mob" (click)="onCloseSendMoneyPopup()">
           <img class="modal__control-icon" src="../../../assets/img/close-blue.svg"></a>
       </div>
     </div>
@@ -38,7 +38,7 @@
         >
           <a class="steps__link">
             <span class="steps__number steps__number--valid">2</span>
-            <span class="steps__number-mob-current">2. Crypto Withdrawal</span>
+            <span class="steps__number-mob-current">2. {{stepTwoName}}</span>
             <span class="steps__title">{{stepTwoName}}</span>
           </a>
         </li>
@@ -47,7 +47,7 @@
         >
           <a class="steps__link">
             <span class="steps__number steps__number--valid">3</span>
-            <span class="steps__number-mob-current">3. Name</span>
+            <span class="steps__number-mob-current">3. {{stepThreeName}}</span>
             <span class="steps__title">{{stepThreeName}}</span>
           </a>
         </li>
@@ -62,7 +62,7 @@
           </a>
         </li>
       </ul>
-      <div class="steps__counter">step <span class="steps__counter-val">1</span>/ 4</div>
+      <div class="steps__counter">step <span class="steps__counter-val">{{step}}</span>/ 4</div>
     </div>
     <!-- modal header end -->
     <div class="modal__content">
