--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
@@ -1,18 +1,20 @@
 <div class="title send__title">Make Inner transfer protected by code</div>
+<div class="formWraper" *ngIf="isEnterData">
 <div class="subtitle send__subtitle">( the code will be sent to you after transaction verification )</div>
+<form [formGroup]="form">
 <div class="send__inputs-wrap">
   <div class="select send__select send__select--custom">
-    <div class="select__value select__value--active">
-      <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-      BTC
+    <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
+      <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+      {{activeCrypto ? activeCrypto.name : ''}}
     </div>
     <div class="select__label">Currency</div>
     <div class="select__line"></div>
     <div class="select__triangle"></div>
     <!--add select__list-searching--open for looking open state-->
-    <div class="select__list-searching">
+    <div class="select__list-searching" *ngIf="openCurrencyDropdown">
       <div class="select__search">
-        <input class="select__search-input" type="text" placeholder="Search" required>
+        <input class="select__search-input" type="text" placeholder="Search" (input)="searchCoin($event)">
         <div class="select__search-icon">
           <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -21,63 +23,68 @@
         </div>
       </div>
       <div class="select__list-searching-body">
-        <h6 class="select__searching-items-title">A</h6>
-        <div class="select__searching-items-wrap">
-          <div class="select__searching-item">
-            <img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">
-            <span>ETH</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-            <span>BTC</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/zec-icon.svg" class="select__list-item-icon">
-            <span>ZEC</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">
-            <span>ETH</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-            <span>BTC</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/zec-icon.svg" class="select__list-item-icon">
-            <span>ZEC</span>
-          </div>
 
-        </div>
+
+        <perfect-scrollbar>
+          <ng-container *ngFor="let letter of alphabet">
+            <h6 class="select__searching-items-title">{{letter.toUpperCase()}}</h6>
+            <div class="select__searching-items-wrap">
+              <div class="select__searching-item" *ngFor="let name of cryptoNames | groupCoin:letter"
+                   (click)="selectCurrency(name)">
+                <!--<img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">-->
+                <span>{{name.name}}</span>
+              </div>
+            </div>
+          </ng-container>
+        </perfect-scrollbar>
+
+
       </div>
     </div>
   </div>
-  <div class="wrap-input send__wrap-input">
-    <div class="avaliable">Avaliable: <a href="#" class="link">123 BTC</a></div>
-    <input class="wrap-input__input" required>
-    <label class="wrap-input__label"><span>BTC </span>Amount</label>
-    <div class="wrap-input__line"></div>
+  <div class="wrap-input send__wrap-input"
+       [ngClass]="{'wrap-input--error': isSubmited && (isAmountMax || isAmountMin || form.controls['amount'].value === '0')}">
+    <div class="avaliable">Avaliable: <a (click)="balanceClick()" class="link">
+      {{activeBalance | number:'1.1-8' | replaceNumber}} {{activeCrypto ? activeCrypto.name : ''}}
+    </a></div>
+    <app-price-input [placeholder]="(activeCrypto ? activeCrypto.name : '') + ' Amount'"
+                     (customInput)="amountInput($event)" name="amount" formControlName="amount"></app-price-input>
     <!--Input error section starts-->
-    <span class="wrap-input__message wrap-input__message--show">Day limit for withdrawal is 30 000 BTC</span>
+    <!--<span class="wrap-input__message wrap-input__message&#45;&#45;show">Day limit for withdrawal is 30 000 BTC</span>-->
+    <span class="wrap-input__message wrap-input__message--show"
+          *ngIf="(isAmountMin || form.controls['amount'].value === '0') && isSubmited">
+      Minimum sum for withdrawal {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
+    <span class="wrap-input__message wrap-input__message--show"
+          *ngIf="isAmountMax && isSubmited">
+      Max sum for withdrawal {{activeBalance}}</span>
     <!--Input error section ends-->
   </div>
 </div>
+</form>
 <div class="send__line"></div>
 <div class="send__info">
   <div class="send__info-row">
-    <div class="send__info-title">You want to withdraw:</div>
-    <div class="send__info-value">0 BTC</div>
+    <div class="send__info-title">You want to transfer:</div>
+    <div class="send__info-value">{{responseCommission.amount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Exchange comission:</div>
-    <div class="send__info-value">12% = 0 BTC</div>
+    <div class="send__info-value">{{responseCommission.companyCommissionRate}} =
+      {{responseCommission.totalCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}
+    </div>
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Total with comission:</div>
-    <div class="send__info-value">0.000005 BTC</div>
+    <div class="send__info-value">{{responseCommission.resultAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
 </div>
-<button class="btn btn--center btn--empty-blue">Create code</button>
+<button class="btn btn--center"
+        [ngClass]="{
+        'btn--empty-blue': !form.valid && !isSubmited ,
+        'btn--error': (!form.valid || isAmountMin || isAmountMax )&& isSubmited
+        }"
+        (click)="submitTransfer()">
+  Create code</button>
 <div class="send__line"></div>
 <div class="note modal__note">
   <div class="note__title">Please note:</div>
@@ -85,4 +92,14 @@
     <li class="note__list-item">Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email.</li>
     <li class="note__list-item">After making a withdrawal, you can track its progress in history on funds page.</li>
   </ul>
+</div>
+</div>
+
+
+<div *ngIf="!isEnterData" class="captcha-wrapper">
+  <h6 class="popup__title">Enter the captcha</h6>
+  <re-captcha (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
+  <div class="popup__links-wrap  popup__links-wrap--center">
+    <a class="popup__link" (click)="goToForm()">Back to withdrawal form</a>
+  </div>
 </div>
