--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -10,6 +10,8 @@
         [currentPage]="currentPage"  
         [Tab]="Tab"
         [currTab]="currTab"
+        [hideAllZero]="hideAllZero"
+        (onToggleAllZero)="onToggleAllZero($event)"
         (onPaginate)="onPageChanged($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
@@ -23,6 +25,8 @@
         [currentPage]="currentPage"  
         [Tab]="Tab"
         [currTab]="currTab"
+        [hideAllZero]="hideAllZero"
+        (onToggleAllZero)="onToggleAllZero($event)"
         (onPaginate)="onPageChanged($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
@@ -121,9 +125,9 @@
           </button>
 
         </div>
-        <div class="balance__hide-zero">
+        <div class="balance__hide-zero" *ngIf="currTab !== Tab.PR">
           <label for="" class="toggler">
-            <input type="checkbox" name="hideZero">
+            <input type="checkbox" name="hideZero" [(ngModel)]="hideAllZero" (click)="onToggleAllZero()">
             <span class="toggler__indicate"></span>
           </label>
           <span>Hide zero balances</span>
