--- a/src/app/dashboard/components/chat/day-chat/day-chat.component.html
+++ b/src/app/dashboard/components/chat/day-chat/day-chat.component.html
@@ -1,3 +1,3 @@
-<div class="widget__message-day">{{  dateChatItem.date | date:"MM/dd/yy" }}</div>
+<div class="widget__message-day">{{  dateChatItem.date | date }}</div>
 
 <app-chat-message *ngFor="let message of messages" [message]="message"></app-chat-message>
