--- a/src/app/funds/balance/refill-money/refill-money.component.html
+++ b/src/app/funds/balance/refill-money/refill-money.component.html
@@ -10,7 +10,7 @@
     <!-- modal header start -->
     <div class="modal__header-mob">
       <div class="steps__counter steps__counter--mob">step
-        <span class="steps__counter-val">{{step}}</span>/3</div>
+        <span class="steps__counter-val">{{step}}</span>/2</div>
       <div class="modal__header-mob-controls">
         <!--<a class="modal__control-mob" href="#">-->
         <!--<img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg">-->
@@ -39,7 +39,7 @@
         >
           <a class="steps__link">
             <span class="steps__number steps__number--current">2</span>
-            <span class="steps__number-mob-current">2. Crypto deposit</span>
+            <span class="steps__number-mob-current">2. {{stepTwoName}}</span>
             <span class="steps__title">{{stepTwoName}}</span>
           </a>
         </li>
@@ -51,7 +51,7 @@
           <!--</a>-->
         <!--</li>-->
       </ul>
-      <div class="steps__counter">step <span class="steps__counter-val">{{step}}</span>/ 3</div>
+      <div class="steps__counter">step <span class="steps__counter-val">{{step}}</span>/ 2</div>
     </div>
     <!-- modal header end -->
     <div class="modal__content">
