added infinite scroll to orders and down load excel

--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -26,7 +26,11 @@
           <th class="table__cell-head table__cell-head--tar">Price</th>
         </tr>
       </thead>
-      <tbody class="table__body table__body--none-shadow">
+      <tbody class="table__body table__body--none-shadow"
+        infiniteScroll
+        [infiniteScrollDistance]="2"
+        (scrolled)="changePage(currentPage + 1)"
+      >
         <!-- t-row start-->
         <ng-container *ngFor="let item of orderItems$ | async">
           <tr class="table__row--mob" [attr.data-id]="item.id" (click)="toggleDetails($event)">
@@ -57,7 +61,7 @@
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Total Price</div>
-                <div class="table__details-item-value">{{item.amountWithCommission}} USD</div>
+                <div class="table__details-item-value">{{item.amountWithCommission}}</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Type</div>
@@ -65,7 +69,7 @@
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Fee</div>
-                <div class="table__details-item-value">{{item.commissionValue}}% ~ 0.003423 BTC</div>
+                <div class="table__details-item-value">{{item.commissionValue}}%</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title"><button class="btn btn--small">Cancel</button></div>
