--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -29,6 +29,7 @@
       <tbody class="table__body table__body--none-shadow"
         infiniteScroll
         [infiniteScrollDistance]="2"
+        [infiniteScrollDisabled]="!isMobile || (orderItems$ | async).length === (countOfEntries$ | async)"
         (scrolled)="changePage(currentPage + 1)"
       >
         <!-- t-row start-->
@@ -69,7 +70,7 @@
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Fee</div>
-                <div class="table__details-item-value">{{item.commissionValue}}%</div>
+                <div class="table__details-item-value">{{item.commissionValue}}% ~ {{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title"><button class="btn btn--small">Cancel</button></div>
@@ -77,6 +78,11 @@
             </td>
           </tr>
         </ng-container>
+        <tr class="table__row--mob" *ngIf="!(orderItems$ | async).length">
+          <td class="table__cell table__cell--tal" colspan="4">
+            No matching records found
+          </td>
+        </tr>
         <!-- t-row end-->
       </tbody>
     </table>
@@ -247,20 +253,20 @@
             <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType}}</span>
           </td>
           <td class="table__cell">
-            <span>{{item.amountConvert}} BTC</span>
+            <span>{{item.amountConvert}} {{item.currencyPairName | splitCurrency: 1}}</span>
           </td>
           <td class="table__cell">
             <span class="orders__for">for</span>
           </td>
           <td class="table__cell">
-            <span>{{item.exExchangeRate}} USD</span>
+            <span>{{item.exExchangeRate}} {{item.currencyPairName | splitCurrency: 2}}</span>
           </td>
           <td class="table__cell">
             <span class="orders__comission">{{item.commissionValue}}% </span><span class="orders__comission-usd">~<span>
-                0.00015 USD</span></span>
+              {{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</span></span>
           </td>
           <td class="table__cell">
-            <span>{{item.amountWithCommission}} USD</span>
+            <span>{{item.amountWithCommission}} {{item.currencyPairName | splitCurrency: 2}}</span>
           </td>
           <td class="table__cell">
             <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-red table__row-btn" style="width: 100%; max-width: 58px;" (click)="openPopup(item)">Cancel</button>-->
