refactoring code and implement commission api

--- a/src/app/funds/balance/send-money/send-step-one/send-step-one.component.html
+++ b/src/app/funds/balance/send-money/send-step-one/send-step-one.component.html
@@ -3,13 +3,13 @@
   <p>How would you like to send the money?</p>
 </div>
 <button class="btn btn--center btn--empty-blue"
-        (click)="onChooseSend('Crypto Withdrawal')"
+        (click)="onChooseSend(CRYPTO_WITHDRAWAL)"
 >Crypto withdrawal</button>
 
 <button class="btn btn--center btn--empty-blue"
-        (click)="onChooseSend('Fiat Withdrawal')"
+        (click)="onChooseSend(FIAT_WITHDRAWAL)"
 >Fiat withdrawal</button>
 
 <button class="btn btn--center btn--empty-blue"
-        (click)="onChooseSend('Inner Transfer')"
+        (click)="onChooseSend(INNER_TRANSFER)"
 >Inner transfer</button>
