--- a/src/app/funds/balance/send-money/send-step-three/send-step-three.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-step-three.component.html
@@ -4,18 +4,17 @@
 </app-transfer-instant>
 
 <app-transfer-protected-email-code
-*ngIf="choosedName === 'By code'"
+*ngIf="choosedName === BY_CODE"
 >
 </app-transfer-protected-email-code>
 
 <app-transfer-protected-code
-*ngIf="choosedName === 'By private code'"
+*ngIf="choosedName === BY_PRIVATE_CODE"
 >
 </app-transfer-protected-code>
 
 <app-send-tfa
-  *ngIf="choosedName === 'With code'"
-  (sendSuccess)="onSendSuccess($event)"
+  *ngIf="choosedName === WITH_CODE"
   [data]="data"
 >
 </app-send-tfa>
