--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -84,19 +84,19 @@
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Exchange comission:</div>
-    <div class="send__info-value">12% = 0 {{activeCrypto ? activeCrypto.name : ''}}</div>
+    <div class="send__info-value">{{calculateData.companyCommissionRate}} = {{calculateData.companyCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Merchant comission:</div>
-    <div class="send__info-value">{{calculateData.percentMerchant}}% = {{calculateData.merchantSum}} {{activeCrypto ? activeCrypto.name : ''}} <span class="send__merchant-comission">(but not less than {{calculateData.fixedMinCommissiom}})</span></div>
+    <div class="send__info-value">{{calculateData.merchantCommissionRate}} = {{calculateData.merchantCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Total comission:</div>
-    <div class="send__info-value">{{calculateData.totalCommission}}% = {{calculateData.totalCommissionSum}} {{activeCrypto ? activeCrypto.name : ''}}</div>
+    <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
   <div class="send__info-row">
     <div class="send__info-title">Total with comission:</div>
-    <div class="send__info-value">{{calculateData.amountWithCommission }} {{activeCrypto ? activeCrypto.name : ''}}</div>
+    <div class="send__info-value">{{calculateData.resultAmount }} {{activeCrypto ? activeCrypto.name : ''}}</div>
   </div>
 </div>
 <button class="btn btn--center  "
@@ -106,7 +106,7 @@
         }"
         (click)="onSubmitWithdrawal()"
 >Withdraw
-  <span class="value">{{calculateData.amountWithCommission}}</span>
+  <span class="value">{{calculateData.resultAmount}}</span>
   <span> {{activeCrypto ? activeCrypto.name : ''}}</span>
 </button>
 <div class="send__line"></div>
