--- a/src/app/funds/balance/send-money/send-successful/send-successful.component.html
+++ b/src/app/funds/balance/send-money/send-successful/send-successful.component.html
@@ -9,7 +9,7 @@
   </div>
   <!--send crypto/fiat start-->
 
-  <div class="send-crypto" *ngIf="data.operation === 'Send Crypto'">
+  <div class="send-crypto" *ngIf="data.operation === SEND_CRYPTO">
     <div class="title send__successful-title">Request was created!</div>
     <div class="subtitle send__successful-subtitle">
       You can track the progress in Pending requests table on <a routerLink="/transaction-history"
@@ -20,7 +20,7 @@
   <!--send crypto/fiat end-->
   <!--send instant-transfer start-->
 
-  <div *ngIf="data.operation === 'Transfer Instant'">
+  <div *ngIf="data.operation === TRANSFER_INSTANT">
   <div class="title send__successful-title" >Funds were sent!</div>
   <div class="subtitle send__successful-subtitle">
     You can check the status of completed transfer in the <a routerLink="/transaction-history" class="link">Transaction
@@ -30,13 +30,13 @@
 
   <!--send instant-transfer end-->
   <!--send protected email-code-transfer start-->
-  <div class="send-fiat" *ngIf="data.operation === 'By private code'">
+  <div class="send-fiat" *ngIf="data.operation === BY_PRIVATE_CODE">
     <div class="title send__successful-title">Private code was created successfully!</div>
     <div class="send__code-wrap">
       <div class="send__code-title">Use this code to get the transfer</div>
       <div class="send__code">{{data.successData.hash}}</div>
       <button class="btn btn--small btn--center btn--empty-blue" *ngIf="!isSowCopyAddress"
-              (click)="copyToBuffer(data.successData.hash, 'Copy address')">
+              (click)="copyToBuffer(data.successData.hash, COPY_ADDRESS)">
         Copy
       </button>
       <button class="btn btn--small btn--empty-blue refill__crypto-copy-btn" *ngIf="isSowCopyAddress"
@@ -52,7 +52,7 @@
   <!--send protected email-code-transfer end-->
   <!--send protected code-transfer start-->
 
-  <div *ngIf="data.operation === 'Send Fiat'">
+  <div *ngIf="data.operation === SEND_FIAT">
   <div class="title send__successful-title">Code was created successfully!</div>
   <div class="send__code-wrap">
     <div class="send__code-title">Use this code to get the transfer</div>
